--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -1,10 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="80dp"
-    android:height="80dp"
+    android:width="55dp"
+    android:height="55dp"
     android:viewportWidth="512"
-    android:viewportHeight="512"
-    android:tint="@color/black">
+    android:viewportHeight="512">
     <path
-        android:fillColor="@color/white"
-        android:pathData="M257,0C116.39,0 0,114.39 0,255s116.39,257 257,257s255,-116.39 255,-257S397.61,0 257,0zM392,285H287v107c0,16.54 -13.47,30 -30,30c-16.54,0 -30,-13.46 -30,-30V285H120c-16.54,0 -30,-13.46 -30,-30c0,-16.54 13.46,-30 30,-30h107V120c0,-16.54 13.46,-30 30,-30c16.53,0 30,13.46 30,30v105h105c16.53,0 30,13.46 30,30S408.53,285 392,285z" />
+        android:fillColor="#ff1744"
+        android:pathData="M256,0C114.833,0 0,114.833 0,256s114.833,256 256,256s256,-114.853 256,-256S397.167,0 256,0zM256,472.341c-119.275,0 -216.341,-97.046 -216.341,-216.341S136.725,39.659 256,39.659S472.341,136.705 472.341,256S375.295,472.341 256,472.341z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M355.148,234.386H275.83v-79.318c0,-10.946 -8.864,-19.83 -19.83,-19.83s-19.83,8.884 -19.83,19.83v79.318h-79.318c-10.966,0 -19.83,8.884 -19.83,19.83s8.864,19.83 19.83,19.83h79.318v79.318c0,10.946 8.864,19.83 19.83,19.83s19.83,-8.884 19.83,-19.83v-79.318h79.318c10.966,0 19.83,-8.884 19.83,-19.83S366.114,234.386 355.148,234.386z" />
 </vector>
