--- a/app/src/main/res/menu/menu_bot_navi.xml
+++ b/app/src/main/res/menu/menu_bot_navi.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/botNavHome"
+        android:id="@+id/bot_nav_home"
         android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
-        android:id="@+id/botNavEmergency"
+        android:id="@+id/bot_nav_emergency"
         android:icon="@drawable/ic_important"
         android:title="Emergency Numbers" />
 </menu>
