--- a/app/src/main/res/layout/activity_home_registernumber.xml
+++ b/app/src/main/res/layout/activity_home_registernumber.xml
@@ -45,6 +45,7 @@
 
 
         <com.google.android.material.textfield.TextInputEditText
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Name" />
@@ -63,6 +64,7 @@
         app:layout_constraintTop_toBottomOf="@id/name">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Contact Number" />
